--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,17 @@ body {
   max-width: 100vw !important;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    rgba(59, 130, 246, 0.5),
+    rgba(139, 92, 239, 0.92)
+  );
+  border-radius: 6px;
+}
+
 @layer components {
   .home-section-wrapper {
     @apply min-h-[85vh] w-full flex flex-col align-middle justify-center;
